--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 python-telegram-bot==22.2
-openpyxl==3.1.5
-python-dotenv==1.0.1
-flask==3.0.3
-pytesseract==0.3.13
-pillow==11.3.0
-pyTelegramBotAPI==4.27.0
+Flask
+python-dotenv
+openpyxl
