--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 python-telegram-bot==22.2
-Flask
-python-dotenv
 openpyxl==3.1.5
-
+requests==2.32.4
+pytesseract==0.3.13
+pillow==11.3.0
+pyTelegramBotAPI==4.27.0
+flask==3.0.3
+python-dotenv
